--- a/css/photos.css
+++ b/css/photos.css
@@ -305,7 +305,7 @@
   text-align:center;
   line-height:0.8em;
   padding:15px;
-  padding-top:30px;
+  padding-top:31px;
   bottom:15px;
   vertical-align:bottom;
 }
